--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             <div class="col-lg-6">
                                 <ul>
                                     <li><i class="bi bi-chevron-right"></i><strong>Birthday:</strong> <span>26 March 1993</span></li>
-                                    <li><i class="bi bi-chevron-right"></i><strong>Website:</strong> <span>www.example.com</span></li>
+                                    <li><i class="bi bi-chevron-right"></i><strong>Website:</strong> <span>https://abhinarigara.github.io/portfolio.github.io/</span></li>
                                     <li><i class="bi bi-chevron-right"></i><strong>Phone:</strong> <span>+91 9033226448</span></li>
                                     <li><i class="bi bi-chevron-right"></i><strong>City:</strong> <span>Rajula (Amreli)</span></li>
                                     
