--- a/index.html
+++ b/index.html
@@ -191,6 +191,16 @@
                         <h3 class="resume-title">Professional Experience</h3>
                         <div class="resume-item">
                             <h4>Senior iOS Application Developer</h4>
+                            <h5>JULY 2023 - Till date</h5>
+                            <p><em>Freelancer</em></p>
+                            <ul>
+                                <li>Develop new features</li>
+                                <li>Bug fixes and Debugging</li>
+                                <li>Release app to appStore</li>
+                            </ul>
+                        </div>
+                        <div class="resume-item">
+                            <h4>Senior iOS Application Developer</h4>
                             <h5>JULY 2021 - JUNE 2023</h5>
                             <p><em>CIO Infotech PVT.LTD., Pune</em></p>
                             <ul>
@@ -314,7 +324,7 @@
                 </div>
 
                 <div class="row" data-aos="fade-in">
-                    <div class="col-lg-5 d-flex">
+                    <div class="col-lg-12 d-flex">
                         <div class="info">
                             <div class="address">
                                 <i class="bi bi-geo-alt"></i>
@@ -334,7 +344,7 @@
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7448.067728273352!2d71.44152019107516!3d21.031330972474017!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be245bc16050f2d%3A0x37090411bd36c6a3!2sGhansham%20Nagar%2C%20Rajula%2C%20Gujarat%20365560!5e0!3m2!1sen!2sin!4v1694601897807!5m2!1sen!2sin" width="100%" height="290" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                     </div>
-
+<!-- 
                     <div class="col-lg-7 mt-5 mt-lg-0 d-flex">
                         <form action="forms/contact.php" method="post" role="form" class="php-email-form">
                             <div class="row">
@@ -362,7 +372,7 @@
                             </div>
                             <div class="text-center"><button type="submit"> Send Message</button></div>
                         </form>
-                    </div>
+                    </div> -->
                 </div>
 
             </div>
